[gd_scene load_steps=4 format=3 uid="uid://d3x7ekovo2hqj"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_j6jho"]
[ext_resource type="Theme" uid="uid://derjom2jih82r" path="res://resources/default_theme.tres" id="1_lg72o"]
[ext_resource type="Texture2D" uid="uid://81dhe50y0eg" path="res://assets/images/sprites/hourglass_16x16.png" id="2_y4k6r"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_j6jho")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 10.0
grow_horizontal = 2
theme = ExtResource("1_lg72o")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_y4k6r")
expand_mode = 3

[node name="ScoreLabel" type="Label" parent="MarginContainer/PanelContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "99"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/PanelContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_y4k6r")
expand_mode = 3

[node name="TimerLabel" type="Label" parent="MarginContainer/PanelContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "99"
horizontal_alignment = 1
vertical_alignment = 2

[node name="GameOverContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lg72o")

[node name="PanelContainer" type="PanelContainer" parent="GameOverContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOverContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GameOverContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "GAME OVER"
